# model-lstm

./: Dockerfile  README.md  REAME.md  app.py  data_preprocessing.py  lstm_stock_model.h5  model_prediction.py  model_training.py  pyproject.toml  requirements.txt  scaler.pkl  train_model.py  utils.py
